fix container overflow

--- a/01- 3 Column Card Component/style.css
+++ b/01- 3 Column Card Component/style.css
@@ -4,6 +4,15 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 body {
   background-color: hsl(0, 0%, 95%);
   font-size: 15px;
@@ -11,10 +20,10 @@ body {
 }
 
 .container {
-  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 #card {
@@ -78,16 +87,12 @@ button {
 .attribution {
   font-size: 11px;
   text-align: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
 }
 
 .attribution a {
   color: hsl(228, 45%, 44%);
-}
-@media (min-width: 375px) {
-  .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-  }
 }
